--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.rockbox"
 	android:versionCode="2"
-	android:versionName="1.0"
+	android:versionName="1.0">
 	<application android:theme="@style/Theme.rockbox" 
                 android:name=".RockboxApp" android:icon="@drawable/launcher"
 		android:label="@string/app_name" 
